--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,14 @@
 name: Continuous Integration
 
-on: [push]
+on:
+  workflow_dispatch
+  push:
+  pull_request:
+    branches:
+      - 'main'
+
+permissions:
+  packages: write
 
 env:
   REGISTRY: ghcr.io
@@ -14,6 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to Container Registry
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -39,6 +48,6 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name == 'push tag' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
