--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: Continuous Integration
 
 on:
-  workflow_dispatch
-  push
+  workflow_dispatch:
+  push:
   pull_request:
     branches:
       - 'main'
